# funexcoin-old

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  libfunexcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  funexcoin.sln  funexcoin_config.h  msvc-autogen.py
contrib/: README.md  funexcoin-pos-cli.bash-completion  funexcoin-pos-qt.pro  funexcoin-pos-tx.bash-completion  funexcoin-posd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  funexcoin-conf.md  funexcoin-pos-conf.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  funexcoin-cli.1  funexcoin-qt.1  funexcoin-tx.1  funexcoin-wallet.1  funexcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  coins.h  (+34 more)
(+456 files in other folders)
